# homebrew-pcypher

./: README.md  pcypher.rb  pyproject.toml
src/pcypher/: __init__.py  main.py  parsetab.py  pcypher.py
tests/: cypher_sample.py
