[project]
name = "pcypher"
authors = [
    {name = "Rio Fujita", email = "rifujita@microsoft.com"},
]
version = "0.1.0"
license = {file = "LICENSE"}
description = "pcypher is a Python library to parse Cypher queries."
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9.21"
dependencies = [
    "ply>=3.11",
]

[project.scripts]
pcypher = "pcypher.main:main"

[tool.uv.workspace]
members = ["pcypher"]

[project.urls]
Homepage = "https://github.com/rioriost/homebrew-pcypher"
Issues = "https://github.com/rioriost/homebrew-pcypher/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
  "src/pcypher/*.py",
  "/tests",
]
exclude = [
  "uv.lock",
  "dist/.DS_Store",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pcypher"]
